[project]
name = "data-warehouse-framework"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.8"
dependencies = [
    "mysql-connector-python>=9.5.0",
    "python-decouple>=3.8",
    "pyyaml>=6.0.3",
    "typer>=0.20.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.8",
]

[tool.ruff]
# 设置全局选项
line-length = 128 # 行长度限制
